<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Chats">Чаты</string>
    <string name="settings_default_username">Dmitrii Rabeev</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+7-911-111-11-11</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер тнлефона</string>
    <string name="setting_default_login">Rabeev Dmitrii</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы Отправили SMS с кодом проаерки на Ваш Телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефна</string>
</resources>